functionality fixes, readability fixes, and organizational fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,6 @@ body {
   background-color: #343434;
 }
 
-/* .first-round-body {
-  width: 60vw;
-  height: 60vh;
-  margin: 0 auto;
-} */
-
 /* LANDING PAGE CSS */
 .landing-page {
   display: flex;
@@ -47,7 +41,7 @@ body {
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-.page-items > a {
+.page-items>a {
   border: 2px solid black;
   width: 8%;
   padding: 8px;
@@ -87,15 +81,17 @@ h1 {
 
 h3 {
   font-size: 30px;
+  margin-bottom: 10px;
 }
 
 #grid-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, auto);
-  gap: 3px;
-  max-width: 964px;
+  gap: 5px;
+  max-width: 1024px;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 #grid-container>.category-items {
@@ -109,6 +105,12 @@ h3 {
 #grid-container>div {
   background-color: #3bbced;
   padding: 30px;
+  text-align: center;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  overflow: hidden;
+  /* Hide overflow content */
 }
 
 
@@ -121,7 +123,7 @@ h3 {
   /* background-color: #D3D3D3; */
 }
 
-.input-div > input {
+.input-div>input {
   border: 2px solid black;
   width: 20%;
   height: 40px;
@@ -131,7 +133,7 @@ h3 {
   text-align: center;
 }
 
-.input-div > div > button {
+.input-div>div>button {
   border: 2px solid black;
   width: 20%;
   padding: 12px;
@@ -158,7 +160,7 @@ h3 {
   justify-content: flex-end;
 }
 
-.next-round-btn > button {
+.next-round-btn>button {
   margin-bottom: 10px;
   text-decoration: none;
   font-size: 20px;
@@ -171,7 +173,31 @@ h3 {
   text-decoration: none;
   color: black;
   background-color: chocolate;
+  cursor: pointer;
 }
+
+.next-round-btn-2 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.next-round-btn-2 > button {
+  margin-bottom: 10px;
+  text-decoration: none;
+  font-size: 20px;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 15%;
+  padding: 12px;
+  margin: 10px;
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: black;
+  background-color: chocolate;
+  cursor: pointer;
+}
+
+
 
 .footer>h2 {
   display: flex;
